<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:background="@drawable/item_background"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical">

		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/loginscreen_header"
			android:textColor="#000" android:layout_margin="10dip"
			android:textStyle="bold" />

		<EditText android:id="@+id/loginscreen_usernameEditText"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:hint="@string/usernametext" android:singleLine="true"
			android:layout_marginLeft="10dip" android:layout_marginRight="10dip"
			android:inputType="textVisiblePassword" android:imeOptions="actionNext" />

		<EditText android:id="@+id/loginscreen_passwordEditText"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:hint="@string/passwordtext" android:singleLine="true"
			android:password="true" android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip" android:inputType="textPassword"
			android:imeOptions="actionDone" />

        <Button android:id="@+id/loginscreen_signinButton"
                android:background="@drawable/blue_button"
      			android:layout_width="fill_parent" android:layout_height="wrap_content"
      			android:text="@string/sign_in" android:layout_marginLeft="10dip"
      			android:layout_marginRight="10dip" android:layout_marginTop="10dip" />

        <Button android:id="@+id/loginscreen_signupButton"
                android:background="@drawable/blue_button"
      			android:layout_width="fill_parent" android:layout_height="wrap_content"
      			android:text="@string/sign_up" android:layout_marginLeft="10dip"
      			android:layout_marginRight="10dip" android:layout_marginTop="10dip" />


	</LinearLayout>
</ScrollView>
