<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:background="@drawable/item_background"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical">

        <ImageView android:id="@+id/field_note_image" android:layout_width="fill_parent"
                      android:src="@drawable/place_holder"

       		android:layout_height="180dip" android:layout_alignParentLeft="true"
       		android:layout_alignParentTop="true" android:paddingTop="10dip"
       		android:layout_marginLeft="5dip" />

        <TextView android:id="@+id/field_note" android:layout_width="wrap_content"
       		android:layout_height="wrap_content" android:textSize="12dip"
       		android:textColor="#000" android:layout_marginTop="18dip"
               android:layout_below="@+id/field_note_image"
               android:layout_marginLeft="10dip" android:text="@string/field_note_placeholder"
               />

        <Button android:id="@+id/edit_note"
                android:background="@drawable/blue_button"
      			android:layout_width="fill_parent" android:layout_height="wrap_content"
      			android:text="@string/edit_note" android:layout_marginLeft="10dip"
      			android:layout_marginRight="10dip" android:layout_marginTop="10dip" />

        <Button android:id="@+id/delete_note"
                android:background="@drawable/red_button"
      			android:layout_width="fill_parent" android:layout_height="wrap_content"
      			android:text="@string/delete_note" android:layout_marginLeft="10dip"
      			android:layout_marginRight="10dip" android:layout_marginTop="10dip" />


	</LinearLayout>
</ScrollView>

